--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -24,12 +24,13 @@
                 <div class="form-group">
                 <i class="bi bi-person-circle"></i> <input type="email" name="email" placeholder="Correo" Obligatorio />
                 </div>
-                <div class="form-group">
-                <i class="bi bi-lock-fill"></i> <input type="password" name="password" placeholder="Contraseña" Obligatorio/>
-                    <span class="input-group-text" id="togglePassword" style="cursor: pointer;">
-                         <i class="bi bi-eye-fill" id="ojito"></i>
-                    </span>
-                </div>
+                        <div class="form-group">
+                            <i class="bi bi-lock-fill"></i>
+                            <input type="password" id="password" name="password" placeholder="Contraseña" required />
+                            <span class="input-group-text" id="togglePassword" style="cursor: pointer;">
+                                <i class="bi bi-eye-fill" id="ojito"></i>
+                            </span>
+                        </div>
                 <div class="soporte">
                     <p>Si tienes algun problema. no dudes en contactarnos</p>
                     <a href="">Soporte</a>
