Se agrego producto y adicional(Controller, Model, Service y repo) de paso se modifico el prodcuto controller agregando las funciones de producto y adicional

--- a/src/main/resources/templates/interfaz.html
+++ b/src/main/resources/templates/interfaz.html
@@ -23,7 +23,7 @@
                                 <i class="fa-solid fa-user icon-user"></i>
                             </a>
                             <div id="logoutMenu" class="logout-menu hidden">
-                                <a href="/vista/home">Logout</a>
+                                <a href="/vista/login">Logout</a>
                             </div>
                         </li>
                     </ul>
@@ -32,7 +32,9 @@
     </header>
 
     <aside>
-        2
+        <h1>
+            
+        </h1>
     </aside>
 
     <main>
