--- a/src/main/resources/static/css/interfaz.css
+++ b/src/main/resources/static/css/interfaz.css
@@ -18,7 +18,7 @@ body{
 
 header{
     grid-area: header;
-    background-color: #EFEDE3;
+    background: linear-gradient(135deg, #EFEDE3 0%, #d3cfc2 100%);
     color: white;
     padding: 1rem;
     text-align: center;
@@ -27,21 +27,158 @@ header{
 
 aside{
     grid-area: aside;
-    background-color: cornflowerblue;
+    background: linear-gradient(135deg, #2193b0 0%, #6dd5ed 100%);
     padding: 1em;
-
-
+    margin-left: 5rem;
 }
+
+
+.logo h1{
+    font-size: 2rem;
+    color: black;
+    text-align: center;
+}
+
+.menu-wraper{
+    margin-top: 4rem;
+    display: flex;
+    flex-direction: column;
+
+    justify-content: center;
+    align-items: center;
+}
+
+.botones{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.btn{
+    background-color: #fff;
+    color: black;
+    border-radius: 10px;
+    border: 1px solid #ccc;
+    margin-top: 3rem;
+    padding: 10px 20px;
+    text-decoration: none;
+    font-size: 1.2rem;
+    transition: background-color 0.3s, color 0.3s;
+    cursor: pointer;
+}
+
+.btn:hover{
+    background-color: black;
+    color: white;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.btn a{
+    text-decoration: none;
+    color: black;
+    font-size: 1.2rem;
+}
+
+.btn a:hover{
+    color: white;
+}
+
+
+.botones-abajo{
+    display: flex;
+    flex-direction: row;
+    margin-top: 14rem;
+   gap: 18rem;
+    
+}
+
+.btn-abajo{
+    background-color: rgb(45, 68, 23);
+    color: white;
+    border-radius: 10px;
+    border: 1px solid #ccc;
+
+    padding: 10px 20px;
+    text-decoration: none;
+    font-size: 1.2rem;
+    transition: background-color 0.3s, color 0.3s;
+    cursor: pointer;
+}
+
+.btn-abajo:hover{
+    background-color: red;
+    color: white;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+
 
 main{
    grid-area: main;
-    background-color: #fff;
+background: linear-gradient(135deg, #f1f1f1 50%, #ffffff 10%);
     padding: 1rem;
 }
 
+.main-wraper{
+    background-color: white;
+    padding: 2rem;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    margin: 2rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.main-header{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 1rem;
+}
+
+.lista-pedidos{
+    display: flex;
+    flex-direction:row;
+    gap: 1rem;
+    background-color: rgba(255, 255, 255, 0.774);
+    border-radius: 10px;
+    padding: 1rem;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    margin-bottom: 1rem;
+    
+}
+
+.total{
+    margin-top: 2rem;
+}
+
+.perdido-item{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    
+}
+
+.pedido{
+    display: flex;
+    flex-direction: wrap;
+    gap: 0.5rem;
+    margin-left: 2rem;
+  
+}
+
+.pedido-text{
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+
+}
+
+
 footer{
     grid-area: footer;
-    background-color: #333;
+    background: linear-gradient(135deg, #333 0%, #111 100%);
     color: white;
     text-align: center;
     padding: 1rem;
@@ -62,7 +199,9 @@ footer{
 
 .logo a{
     text-decoration: none;
-    font-size:  1.5rem;
+    font-size:  2rem;
+    font-family: monospace;
+    letter-spacing: .5rem;
     color: black;
 }
 
