--- a/src/main/resources/templates/interfaz.html
+++ b/src/main/resources/templates/interfaz.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"></html>
 <head>
     <meta charset="UTF-8">
     <title>interfaz</title>
@@ -11,8 +11,9 @@
 
     <header>
         <div class="header">
+
                 <div class="logo">
-                    <a href="/vista/interfaz">Macario</a>
+                    <a href="/vista/interfaz"><b>Macario</b></a>
                 </div>
 
                 <div class="navbar">
@@ -32,20 +33,93 @@
     </header>
 
     <aside>
-        <h1>
+       <div class="logo">
+        <h1>Macario</h1>
+       </div>
+
+       <div class="menu-wraper">
+            <div class="botones">  
+                <button class="btn">Agregar Pedido</button>
+                <button class="btn">Editar Pedido</button>
+                <button class="btn">Eliminar Pedido</button>
+                <button class="btn">Generar Boleta</button>
+            </div>
+
+            <div class="botones-abajo">
+                <button class="btn-abajo">Contacto</button>
+                <button class="btn-abajo">Soporte</button>
+            </div>
             
-        </h1>
+
+       </div>
+
     </aside>
 
-    <main>
-        3
-    </main>
+ <main>
+    <div class="main-wraper">
 
+            <div class="main-header">
+                <div class="titulo">
+                    <h1>Lista De Pedidos</h1>
+                </div>
+
+                <div class="fecha-hora">
+                    <p id="fecha"></p>
+                    <p id="hora"></p>
+                </div>
+            </div>
+
+                <div class="lista-pedidos" th:each="pedido : ${pedidos}">
+                    <hr>
+                    <div class="pedido-item">
+                        <p><strong>Fecha:</strong> <span th:text="${#temporals.format(pedido.fecha, 'dd/MM/yyyy')}"></span></p>
+                        <p><strong>Hora:</strong> <span th:text="${pedido.hora}"></span></p>
+                        <p class="total"><strong>Total:</strong> S/ <span th:text="${pedido.total}"></span></p>
+                    </div>
+
+                  <div class="pedido">
+                        <div th:if="${pedido.carnes}" class="pedido-text">
+                            <h3>Carnes</h3>
+                            <ul>
+                                <li th:each="carne, i : ${pedido.carnes}">
+                                    <span th:text="${carne.nombre}"></span> 
+                                    <br>
+                                    Cantidad: <span th:text="${pedido.cantidadCarnes[carne.id_carne]}"></span>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <div th:if="${pedido.frutas}">
+                            <h3>Frutas</h3>
+                            <ul>
+                                <li th:each="fruta, i : ${pedido.frutas}">
+                                    <span th:text="${fruta.nombre}"></span> -
+                                    Cantidad: <span th:text="${pedido.cantidadFrutas[i.index]}"></span>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <div th:if="${pedido.adicionales}">
+                            <h3>Adicionales</h3>
+                            <ul>
+                                <li th:each="adic, i : ${pedido.adicionales}">
+                                    <span th:text="${adic.nombre}"></span> -
+                                    Cantidad: <span th:text="${pedido.cantidadAdicionales[i.index]}"></span>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>  
+                </div>
+
+    </div>
+</main>
     <footer>
-        4
+        <p>&copy; 2025 Macario. Todos los derechos reservados.</p>
+        
     </footer>
 
     <script src="../scripts/usericon.js"></script>
+    <script src="../scripts/fecha-hora.js"></script>
 
   </body>
 </html>
